<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roman Numeral Converter</string>
    <string name="switchmode">Switch Mode</string>
    <string name="reset">Reset</string>
    <string name="help">Help</string>
    <string name="RNC_title">Roman Numeral Converter</string>
    <string name="RN_text">Roman Numeral</string>
    <string name="RN_input"> e.g. LVI </string>
    <string name="AI_text">Arabic Numeral</string>
    <string name="AI_input"> e.g.  56 </string>
    <string name="RN_status">READY</string>
    <string name="RN_errmsg">.</string>
    <string name="colon"> : </string>
    <string name="buttonAdd">+</string>
    <string name="buttonAuto">  COUNTER </string>
    <string name="buttonAutoUp"> COUNT UP </string>
    <string name="buttonAutoDown">COUNT DOWN</string>
    <string name="buttonAutoStop">   STOP   </string>
    <string name="buttonSubtract">-</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // TODO - change this to be my app AdMobID
    // This is the AdMob test ID ---
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="directionchange">Automatic count direction changed</string>
    <string name="done">DONE</string>
    <string name="failed">FAILED!</string>
    <string name="autoreset">AUTO mode - counter reset</string>
    <string name="manualreset">Manual mode - input fields reset</string>
    <string name="switchmanual">Mode switched to Manual</string>
    <string name="switchauto">Mode switched to AUTO</string>
    <string name="auto">AUTO</string>
    <string name="blank_for_int">%d</string>
    <string name="blank"></string>

</resources>
